--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "dependencies": {
     "async": "2.1.4",
+    "aws-sdk": "^2.326.0",
     "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "chalk": "^2.4.1",
@@ -17,8 +18,6 @@
     "sails": "^1.1.0",
     "sails-ember-rest": "^1.0.15",
     "sails-hook-apianalytics": "https://github.com/Paskalouis/sails-hook-apianalytics/tarball/master",
-    "grunt": "1.0.1",
-    "sails-hook-grunt": "^3.1.0",
     "sails-hook-orm": "^2.1.1",
     "sails-hook-sockets": "^1.5.5",
     "@sailshq/connect-redis": "^3.2.1",
